--- a/Caixa/src/app/tab3/tab3.page.html
+++ b/Caixa/src/app/tab3/tab3.page.html
@@ -12,6 +12,76 @@
       <ion-title size="large">Contas a pagar</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Aluguel</label>
+  </div>
 
-  
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Água</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Luz</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Internet</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Cartão</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Tranporte</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Capacitação</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Limpeza</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Equipamentos</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Fundo de caixa</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Poupança</label>
+  </div>
+
+  <div class="conta">
+    <ion-checkbox color="secondary"></ion-checkbox>
+    <ion-checkbox color="danger" checked="true"></ion-checkbox>
+    <label >Investimentos</label>
+  </div>
+
 </ion-content>
