--- a/Caixa/src/app/tab3/tab3.page.scss
+++ b/Caixa/src/app/tab3/tab3.page.scss
@@ -1,6 +1,14 @@
 ion-content{
-    text-align: center;
+    text-align: left;
 }
 ion-title{
     text-align: center;
+}
+.conta{
+    font-size: 40px;
+    padding-top: 10px;
+    padding-left: 20px;
+}
+.conta label{
+    margin-left: 20px;
 }
